--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<html> 
-	<body> 
-		<li> bricks </li>
-		<li>  mortar </li>
-		<li> </li>
-		<li> </li>
-		<li> </li>
+	<html> 
+		<body> 
 
+			<div> 
+				<ul> 
+			<li>bricks</li>
+			<li> mortar</li>
+			<li> sand </li>
+			<li> </li>
+			<li> </li>
 
-	</body> 
+			</ul>
+		</div>
+		</body> 
 
-</html>
+	</html>
